Fix overflow in low resolution

--- a/src/App.scss
+++ b/src/App.scss
@@ -602,6 +602,7 @@ header {
     height: 204px;
 
     .user-background {
+      padding-left: 18px;
       height: 134px;
       .user {
         h1 {
@@ -613,6 +614,8 @@ header {
       }
     }
     .tabs {
+      padding: 13px 22px;
+
       li {
         button {
           padding: 0 14px;
@@ -628,6 +631,7 @@ header {
             display: flex;
             justify-content: center;
             align-items: center;
+            padding-right: 20px;
           }
         }
         &:last-child {
@@ -644,10 +648,12 @@ header {
 
   .card {
     height: 122px;
+    width: 328px;
 
     .info {
       bottom: -38px;
       height: 122px;
+      padding: 23px;
 
       .title {
         margin-bottom: 4px;
@@ -663,7 +669,46 @@ header {
           line-height: 32px;
           margin-bottom: 0;
         }
+        .previous {
+          width: max-content;
+        }
       }
     }
+  }
+}
+
+@media screen and (max-width: 374px) {
+  header {
+    .tabs {
+      padding: 13px 18px;
+    }
+  }
+
+  .card {
+    width: 316px;
+  }
+}
+@media screen and (max-width: 359px) {
+  header {
+    .tabs {
+      padding: 13px 15px;
+    }
+  }
+
+  .card {
+    width: 310px;
+  }
+}
+@media screen and (max-width: 339px) {
+  header {
+    width: 296px;
+
+    .tabs {
+      padding: 13px 12px;
+    }
+  }
+
+  .card {
+    width: 296px;
   }
 }
